styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;700&display=swap');
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    text-decoration: none;
    font-family: sans-serif;
}

html {
    font-family: 'Montserrat', sans-serif;
}

h2 {
    margin-top: 32px;
    min-height: 120px;
}

li {
    position: relative;
}

.progress-bar {
    border: 1px solid orange;
    height: 5px;
    width: 100%;
}

.counter-container {
    margin-top: 16px;
    color: #eee;
}

.progress {
    background-color: orange;
    height: 100%;
    width: 0%;
}

.content-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 80%;
    max-width: 1020px;
    margin: 0 auto;
    margin-bottom: 40px;
}

.survey-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 450px;
    margin: 0 auto;
}

.survey-container h2 {
    color: #eee;
}

ul#survey-list {
    margin-top: 40px;
}

li {
    list-style: none;
    cursor: pointer;
    margin-bottom: 16px;
    border: 2px solid orange;
    transition: all .1s;
}

li:hover {
    background-color: rgba(255, 166, 0, 0.153);
}

.choice-item {
    display: flex;
    flex-direction: row;
}

.choice-item p {
    width: 90%;
    display: flex;
    align-items: center;
    color: #eee;
    margin-right: 8px;
}

.question-mark {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: orange;
    width: 10%;
    min-height: 50px;
    height: auto;
    margin-right: 8px;
    color: white;
    font-weight: bold;
}

.btn {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 10px 20px
}

.button-container {
    display: flex;
    justify-content: space-between;
    width: 100%;
    margin-top: 32px;
    max-width: 450px;
}

.btn-primary {
    background-color: #28DA62;
    color: white;
    font-weight: bold;
}

.btn:disabled {
    background-color: c4cec7;
}

.btn-secondary {
    background-color: #4A90D4;
    color: white;
    font-weight: bold;
}

.tick {
    position: absolute;
    width: 30px;
    height: 30px;
    right: -50px;
    top: 10px;
}

.off {
    display: none;
}

/* HTML Form */

.form-main {
    display: flex;
    justify-content: center;
}

.form-container {
    margin-top: 80px;
    width: 100%;
    max-width: 800px;
    padding: 0 32px;
}

.form-controller {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-bottom: 32px;
}

.form-controller>label {
    font-family: 'Montserrat', sans-serif;
    font-weight: 100;
    color: #eee;
    font-size: 20px;
}

.error {
    border: 1px solid red;
}

/* Modal */

.modal {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100vw;
    background-color: rgba(0, 0, 0, .7);
    top: 0;
    animation: show-modal 0.2s;
}

.hide {
    display: none;
}

/* Card */

.card {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    padding: 24px;
    height: 350px;
    width: 450px;
    background-color: white;
    border-radius: 2px;
}

.card>.button-container {
    justify-content: flex-end;
}

.card-content {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50%;
}

* {
    margin: 0;
    padding: 0;
    font-family: "montserrat", sans-serif;
}

:root {
    background-color: #333;
}

.contact-section {
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: center;
    align-items: center;
}

.contact-section h1 {
    text-align: center;
    padding-top: 20px;
    color: #eee;
}

.contact-form {
    max-width: 600px;
    width: 100%;
    margin: 32px auto;
    padding: 0 10px;
    overflow: hidden;
}

input:-internal-autofill-selected {
    background-color: transparent;
}

.contact-form-text {
    display: block;
    width: 100%;
    box-sizing: border-box;
    margin: 8px 0;
    border: 0;
    background: transparent;
    padding: 8px;
    outline: none;
    color: #eee;
    border-bottom: 1px solid #eee;
    box-shadow: 0px 2px 4px -2px rgba(0, 0, 0, .3);
    font-size: 16px;
}

.contact-form-text::placeholder {
    color: #aaa;
    font-weight: 100;
    font-family: 'Montserrat', sans-serif;
}

.contact-form-btn {
    float: right;
    border: 0;
    background: #d6623e;
    color: white;
    padding: 12px 50px;
    border-radius: 20px;
    cursor: pointer;
    transition: 0.5s;
}

.contact-form-btn:hover {
    background: #f8663a;
}

.danger {
    color: rgb(198, 26, 26);
    margin-left: 8px;
}

.thankyou{
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    height: 100vh;
    color: #eee;
}
@keyframes show-modal {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@keyframes increaseWidth {
    0% {
        width: 0;
    }
    100% {
        width: 100%;
    }
}

.paragraph {
    margin: 8px;
}

.heading {
    margin-bottom: 32px;;
}

/* Change the white to any color ;) */

input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active {
    -webkit-box-shadow: 0 0 0 30px #333 inset !important;
}

/*Change text in autofill textbox*/

input:-webkit-autofill {
    -webkit-text-fill-color: #eee!important;
}

